# ai-hedge-fund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CN.md  agents.py  backtester.py  docker-compose.yml  models.yaml  package.json  pnpm-lock.yaml  pyproject.toml  run.bat  run.sh  test.py  tools.py
.github/ISSUE_TEMPLATE/: bug_report.md
app/: README.md  run.bat  run.sh
app/backend/: README.md  __init__.py  alembic.ini  main.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 1b1feba3d897_add_data_column_to_hedge_fund_flows.py  2f8c5d9e4b1a_add_hedgefundflowrun_table.py  5274886e5bee_add_hedgefundflow_table.py
app/backend/database/: __init__.py  connection.py  models.py
app/backend/models/: events.py  schemas.py
app/backend/repositories/: __init__.py  flow_repository.py  flow_run_repository.py
app/backend/routes/: __init__.py  flow_runs.py  flows.py  health.py  hedge_fund.py  language_models.py  ollama.py  storage.py
app/backend/services/: graph.py  graphy.py  ollama_service.py  portfolio.py
app/frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/frontend/src/: App.tsx  index.css  main.tsx
app/frontend/src/components/: Flow.tsx  Layout.tsx  custom-controls.tsx  left-sidebar.tsx  sidebar-item.tsx
app/frontend/src/components/layout/: top-bar.tsx
app/frontend/src/components/panels/: component-list.tsx  right-sidebar.tsx
app/frontend/src/components/panels/bottom/: bottom-panel.tsx
app/frontend/src/components/panels/bottom/tabs/: debug-console-tab.tsx  index.ts  output-tab.tsx  problems-tab.tsx  terminal-tab.tsx
app/frontend/src/components/panels/left/: flow-actions.tsx  flow-context-menu.tsx  flow-edit-dialog.tsx  flow-item-group.tsx  flow-item.tsx  flow-list.tsx  left-sidebar.tsx
app/frontend/src/components/panels/right/: component-actions.tsx  component-item-group.tsx  component-item.tsx  component-list.tsx  right-sidebar.tsx
app/frontend/src/components/settings/: api-keys.tsx  appearance.tsx  flows.tsx  general.tsx  index.ts  models.tsx  ollama.tsx  settings.tsx
app/frontend/src/components/settings/models/: cloud.tsx  ollama.tsx
app/frontend/src/components/sidebar/: bottom-panel.tsx  component-group.tsx  component-item-group.tsx  component-item.tsx  component-list.tsx  flow-actions.tsx  flow-create-dialog.tsx  flow-item-group.tsx  flow-item.tsx  flow-list.tsx  left-sidebar.tsx  right-sidebar.tsx  search-box.tsx  sidebar-item-group.tsx  sidebar-item.tsx
app/frontend/src/components/tabs/: flow-tab-content.tsx  tab-bar.tsx  tab-content.tsx
app/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  input.tsx  llm-selector.tsx  sonner.tsx  tooltip.tsx
app/frontend/src/contexts/: flow-context.tsx  node-context.tsx  node-status-context.tsx  tabs-context.tsx  theme-provider.tsx
app/frontend/src/data/: agents.ts  models.ts  multi-node-mappings.ts  node-mappings.ts  sidebar-components.ts
app/frontend/src/edges/: index.ts
app/frontend/src/hooks/: use-component-groups.ts  use-enhanced-flow-actions.ts  use-flow-connection.ts  use-flow-history.ts  use-flow-management-tabs.ts  use-flow-management.ts  use-flow-persistence.ts  use-keyboard-shortcuts.ts  use-node-state.ts  use-output-node-connection.ts  use-resizable.ts  use-toast-manager.ts
app/frontend/src/lib/: utils.ts
app/frontend/src/nodes/: AgentNode.tsx  agent-node.tsx  index.ts  types.ts  utils.ts
app/frontend/src/nodes/components/: agent-node.tsx  agent-output-dialog.tsx  investment-report-dialog.tsx  investment-report-node.tsx  json-output-dialog.tsx  json-output-node.tsx  node-shell.tsx  output-node-status.tsx  portfolio-manager-node.tsx  start-node.tsx  text-input-node.tsx  text-output-dialog.tsx  text-output-node.tsx
app/frontend/src/services/: api.ts  flow-service.ts  flow-storage.ts  sidebar-storage.ts  tab-service.ts  types.ts
app/frontend/src/types/: flow.ts
app/frontend/src/utils/: date-utils.ts  text-utils.ts
data/: models.py
docker/: Dockerfile  docker-compose.yml  run.bat  run.sh
src/: agents.py  backtester.py  main.py  ollama_utils.py  tools.py
src/agents/: aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  market_data.py  michael_burry.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  rakesh_jhunjhunwala.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/data/: akshare_data.py  cache.py  models.py
src/graph/: state.py
src/llm/: api_models.json  models.json  models.py  ollama_models.json
src/tools/: api.py
src/tools/datasources/: __init__.py  akshare.py  base.py  financial_datasets.py
src/utils/: analysts.py  display.py  docker.py  llm.py  ollama.py  progress.py  visualize.py
tests/: test_api_rate_limiting.py
