[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "langchain==0.3.26",
    "langchain-anthropic==0.3.17",
    "langchain-groq==0.3.5",
    "langchain-openai>=0.3.27",
    "langchain-deepseek>=0.1.2",
    "langchain-ollama>=0.3.4",
    "langgraph==0.5.2",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "python-dotenv==1.1.1",
    "matplotlib>=3.10.3",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    # "langchain-google-genai>=2.1.7",
    "fastapi[standard]>=0.116.0",
    "fastapi-cli>=0.0.8",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "akshare-one @ git+https://github.com/zwldarren/akshare-one.git@dev",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "./src",
    "./app",
]

[tool.hatch.build.targets.wheel]
include = [
    "./src",
    "./app",
]

[tool.hatch.build.targets.wheel.sources]
"./src" = "src"
"./app" = "app"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
